@@ -158,7 +158,7 @@ Objex.mixin = function(mixin) {
 
     // mixin prototype
     mixin.prototype && Object.getOwnPropertyNames(mixin.prototype).forEach(function(propName) {
-        if (extendStaticProps.override || typeof Base.prototype[propName] === 'undefined') {
+        if (propName !== 'constructor' && extendStaticProps.override || typeof Base.prototype[propName] === 'undefined') {
             Object.defineProperty(Base.prototype, propName, Object.getOwnPropertyDescriptor(mixin.prototype, propName));
         }
     });
