@@ -101,7 +101,8 @@ module.exports = {
             wwArr = [ 2, 3, wwObj ],
             cowsGetter = function() {
                 return 0;
-            };
+            },
+            originalWerewolfCtor;
 
         function NoPrototypeCtor() {}
         NoPrototypeCtor.prototype = undefined;
@@ -150,10 +151,13 @@ module.exports = {
             Werewolf.mixin(NoPrototypeCtor);
         }, TypeError, 'mixin contructor or object without prototype');
 
+        originalWerewolfCtor = Werewolf.prototype.constructor;
         Werewolf.mixin({ override: true }, Human);
 
         test.notStrictEqual(Werewolf.obj, wwObj, 'static property has been overriden #1');
         test.deepEqual(Werewolf.obj, humanObj, 'static property has been overriden #2');
+
+        test.strictEqual(Werewolf.prototype.constructor, originalWerewolfCtor, 'mixin does not affect prototype.constructor');
 
         test.done();
     },
